Refactor BGPTableTypeRegistryProviderActivator
Rather than wiring through static reference extension in blueprint
and keeping stateful singletons, use a proper whiteboard injection
pattern for OSGi, ServiceLoader and Singleton worlds.

This makes bgp-openconfig-spi to completely wire natively in those
environments.

Change-Id: I325ab8b3cf09bc71cad217e6c1f26c6c69bc0cc1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>